// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fulfillmentInboundShipment getInboundGuidanceForAsin returns sku inbound guidance list if succesful 1`] = `
Array [
  Object {
    "ASINInboundGuidanceList": Array [
      Object {
        "ASIN": "B00005N5PF",
        "GuidanceReasonList": Array [
          "SlowMovingASIN",
        ],
        "InboundGuidance": "InboundNotRecommended",
      },
    ],
    "InvalidASINList": Array [],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment getInboundGuidanceForSku returns sku inbound guidance list if succesful 1`] = `
Array [
  Object {
    "InvalidSKUList": Array [],
    "SKUInboundGuidanceList": Array [
      Object {
        "ASIN": "B00005N5PF",
        "GuidanceReasonList": Array [
          "SlowMovingASIN",
        ],
        "InboundGuidance": "InboundNotRecommended",
        "SellerSKU": "us001",
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`fulfillmentInboundShipment getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
